--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <br />
   <br />
   <div class='bigdiv'>
-    <input class='add' type='text' ng-model='list.newItem' ng-keyup='$event.keyCode == 13 && list.addItem()' placeholder='Add New To-Do Item' size='19' />
+    <input class='add' type='text' ng-model='list.newItem' ng-keyup='$event.keyCode == 13 && list.addItem()' placeholder='Add New To-Do Item Here' size='24' />
     <button class='add' ng-click='list.addItem()'>Add</button>
     <strong> || </strong>
-    <input class='search' type='text' ng-model='list.search' placeholder='Search for Item' size='16' />
-    <button class='search' ng-click='list.filter()'>Search</button>
+    <input class='search' type='text' ng-model='list.search' placeholder='Search For Item Here' size='21' />
+    <!-- <button class='search' ng-click='list.filter()'>Search</button> DO NOT NEED-->
     <br />
     <br />
     <div class='meddiv'>
