--- a/taskList/taskList.html
+++ b/taskList/taskList.html
@@ -1,4 +1,4 @@
-<h3 ng-repeat='item in $ctrl.items | filter: $ctrl.search'>
+<h3 ng-repeat='item in $ctrl.items | filter: $ctrl.search' ng-cloak>
   <span>{{item}}</span>
   <span id='x' ng-click='$ctrl.remove(item)'>X</span>
 </h3>
